- Implemented #3 | Optimization: Store notes in "file system" - Indicate when loading fails - Indicate when localStorage not available

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -304,7 +304,7 @@ h2 {
 #note {
     font-family: consolas, courier new, courier, Lucidatypewriter, monospace;
     font-size: 16pt;
-    background: #ffc;
+    background: #eee;
     padding: .3em;
     height: 3em;
     width: 98%;
