--- a/web/css/style.css
+++ b/web/css/style.css
@@ -155,8 +155,9 @@ h2 {
     background: #eee;
     
     margin-top: 2px;
-    padding: .3em;
-    height: 3em;
+    padding: .5em;
+    height: 5em;
+    width: 97.5%;
 
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
