--- a/web/css/style.css
+++ b/web/css/style.css
@@ -138,7 +138,8 @@ button {  width: auto; overflow: visible; }
  */
  
 body {
-    background-color: #ffc;
+    background-color: #fff;
+    font-size: 14pt;
 } 
  
 h2 {
@@ -146,12 +147,14 @@ h2 {
     margin-bottom: 6pt;
 }
 
+b {
+    font-weight: bold;
+}
+
 #container {
-    
 }
 
 #main {
-    font-size: 14pt;
 }
 
 .textareawrapper
@@ -164,20 +167,17 @@ textarea#note {
     font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace, serif;    
     width: 100%;
     padding: 2px;
-    background-color: transparent;
-    border: 0px;
+    background-color: #ffc;
     margin-bottom: 30px;
 }
 
 textarea#note:focus {
-    outline:none; 
+ 
 }
 
-.button-mobile {
-    color: black;
-    font-size: 14pt;
-    height: 2em;
-    border: solid 1px #ccc;
+table#menu_bar {
+    width: 100%;
+    background-color: rgb(230, 230, 230);
     background-image: -webkit-gradient(
         linear,
         left bottom,
@@ -190,37 +190,67 @@ textarea#note:focus {
         rgb(224,224,224) 10%,
         rgb(245,245,245) 90%
     );
+}
+
+table#menu_bar tr td {
+    padding: 2px;
+    padding-bottom: 4px;
+}
+
+.button-mobile {
+    display: inline-block;
+    color: black;
+    font-size: 14pt;
+    height: 2em;
+    border: solid 1px #ccc;
+    padding: 2px 8px;
     text-shadow: 1px 1px 1px #fff;
     text-align: center;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    box-shadow: 1px 1px 1px #fff;
+    -moz-box-shadow: 1px 1px 1px #fff;
+    -webkit-box-shadow: 1px 1px 1px #fff;
     vertical-align: middle;
     cursor: pointer;
+
 }
 
 .button-mobile img.icon {
     width: 1.8em;
     height: 1.8em;
-    margin-right: 0.3em;
+    margin: 2px;
     vertical-align: middle;
 }
 
-
-span#num_saved {
-    color: #fff;
-    font-size: 17pt;
-    text-outline: 1px 1px #000;
-    text-shadow: rgba(0, 0, 0, 0.9) -1px -1px 4px;
-}
-
-img.icon {
-    width: 2em;
-    height: 2em;
+button img.icon {
+    width: 1.8em;
+    height: 1.8em;
+    vertical-align: middle;
 }
 
 button.icon {
-    width: 2.75em;
-    height: 2.75em;
     text-align: center;
-    vertical-align: middle;
+    height: 3em;
+    padding: 2px;
+}
+
+td.button {
+    width: 2em;
+}
+
+span#num_saved {
+    /*display: inline-block;
+    position: relative;
+    z-index: 2;
+    right: 1em;
+    top: .25em;*/    
+    color: #000;
+    font-size: 18pt;
+    font-weight: bold;
+    /*text-outline: 1px 1px #fff;*/
+    text-shadow: rgba(255, 255, 255, 0.9) -1px -1px 4px;
 }
 
 table.fileList {
@@ -231,27 +261,33 @@ table.fileList {
 table.fileList tr td {
     font-size: 13pt;
     height: 2em;
-    background-color: #eee;
     padding: 0.25em;
     vertical-align: middle;
+    cursor: pointer;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    overflow: hidden;
+    
+    /*
     background-color: rgb(206, 214, 235);
     background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgb(250,
         250, 250) ), color-stop(1, rgb(206, 214, 235) ) );
     background-image: -moz-linear-gradient(center bottom, rgb(250, 250, 250)
         0%, rgb(206, 214, 235) 100% );
-    cursor: pointer;
-    
-    text-overflow: ellipsis;
-    overflow: hidden;
+    */
 }
 
 
 table.fileList tr.active td {
     background-color: rgb(255, 255, 138);
+    /*
     background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgb(250,
         250, 250) ), color-stop(1, rgb(255, 255, 138) ) );
     background-image: -moz-linear-gradient(center bottom, rgb(250, 250, 250)
         0%, rgb(255, 255, 138) 100% );
+    */
 }
 
 #login {
