- Started work on separate mobile and desktop versions - Added some Google Ads: separate versions for desktop and mobile

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -289,8 +289,7 @@ table.fileList tr.active td {
 
 #login {
     float: right;
-    margin-right: 4px;
-    margin-top: 4px;
+    margin: 4px;
 }
 
 #right_status {
